--- a/cnn_feature_extraction.ipynb
+++ b/cnn_feature_extraction.ipynb
@@ -17,7 +17,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "2a645021b9904fc1af93f9c421a0cec0": {
+        "44fc158e7ed140348554ecda6d037bef": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -32,14 +32,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_c53f4d18412d4cc2b7047ba8b9b6c35e",
-              "IPY_MODEL_6b663290391a49c39abf0a8ed3611f66",
-              "IPY_MODEL_0c785a91d083428e9955c798a9d3a8df"
+              "IPY_MODEL_e1df54c36b42440c8f0e69264c42be80",
+              "IPY_MODEL_f4c1c8d4e1084765bfb02afdb81311a8",
+              "IPY_MODEL_0e89f8e14822419195d0ec6d7d98f8c8"
             ],
-            "layout": "IPY_MODEL_7e50f57ae65440b1a1c218758f633623"
+            "layout": "IPY_MODEL_527ed5f86e654e7b92e12887d89c1fc3"
           }
         },
-        "c53f4d18412d4cc2b7047ba8b9b6c35e": {
+        "e1df54c36b42440c8f0e69264c42be80": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -54,13 +54,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_14a44b02d080475bbca99a985582f21a",
+            "layout": "IPY_MODEL_e0fcfe0cf28f4f5c8b1c725b974a65fd",
             "placeholder": "​",
-            "style": "IPY_MODEL_0fb421e82f254a7c9c3d930875ab1b55",
+            "style": "IPY_MODEL_38c21acc1ca147aba0d80e37df695754",
             "value": "100%"
           }
         },
-        "6b663290391a49c39abf0a8ed3611f66": {
+        "f4c1c8d4e1084765bfb02afdb81311a8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -76,15 +76,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_d8d3aa1637654a45b397a6a2b8922dcc",
+            "layout": "IPY_MODEL_22e685e944784598985de10519ab4c2e",
             "max": 165,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_1e2ce2a50b324133b9162f9df214402c",
+            "style": "IPY_MODEL_ae2a8f71f77842b2a432c99f56fc0759",
             "value": 165
           }
         },
-        "0c785a91d083428e9955c798a9d3a8df": {
+        "0e89f8e14822419195d0ec6d7d98f8c8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -99,13 +99,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_fb36a9e8ce624a98a2e73df871ed9961",
+            "layout": "IPY_MODEL_2fef4718417d4f98bf7f7372fdd32f4d",
             "placeholder": "​",
-            "style": "IPY_MODEL_e27dcec44175460c9ba2a456f8b1a880",
-            "value": " 165/165 [02:06&lt;00:00,  4.61s/it]"
+            "style": "IPY_MODEL_c4b44e8c17a946efaca1326218be9b5f",
+            "value": " 165/165 [02:43&lt;00:00,  7.20s/it]"
           }
         },
-        "7e50f57ae65440b1a1c218758f633623": {
+        "527ed5f86e654e7b92e12887d89c1fc3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -157,7 +157,7 @@
             "width": null
           }
         },
-        "14a44b02d080475bbca99a985582f21a": {
+        "e0fcfe0cf28f4f5c8b1c725b974a65fd": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -209,7 +209,7 @@
             "width": null
           }
         },
-        "0fb421e82f254a7c9c3d930875ab1b55": {
+        "38c21acc1ca147aba0d80e37df695754": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -224,7 +224,7 @@
             "description_width": ""
           }
         },
-        "d8d3aa1637654a45b397a6a2b8922dcc": {
+        "22e685e944784598985de10519ab4c2e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -276,7 +276,7 @@
             "width": null
           }
         },
-        "1e2ce2a50b324133b9162f9df214402c": {
+        "ae2a8f71f77842b2a432c99f56fc0759": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -292,7 +292,7 @@
             "description_width": ""
           }
         },
-        "fb36a9e8ce624a98a2e73df871ed9961": {
+        "2fef4718417d4f98bf7f7372fdd32f4d": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -344,7 +344,7 @@
             "width": null
           }
         },
-        "e27dcec44175460c9ba2a456f8b1a880": {
+        "c4b44e8c17a946efaca1326218be9b5f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -374,13 +374,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qEonzl924VM5",
-        "outputId": "71fb73fe-49ee-4ea3-baf7-5dd46840e72f"
+        "outputId": "d304a4d9-4263-41d8-dc82-460c4e439a40"
       },
       "outputs": [
         {
@@ -417,7 +417,7 @@
       "metadata": {
         "id": "l5K26hIK4hDC"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,9 +439,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KqLShBHJAbWP",
-        "outputId": "689499ea-c95a-44ad-e742-adb24f093657"
+        "outputId": "e6e9911b-4b3c-475a-a1a8-80ca595f764c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +487,7 @@
       "metadata": {
         "id": "x5_NK0Cc4taV"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -545,9 +545,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LQ9vXyGJ411s",
-        "outputId": "4b17f9eb-5c72-4085-a280-a5e34f8b496f"
+        "outputId": "573aea93-3a8d-448e-a72c-3242833b6190"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,9 +597,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7f7CwIus4-_5",
-        "outputId": "41470a33-d654-4ac3-b23a-81c8c1bf34e2"
+        "outputId": "2bdda3ff-16c3-4a57-c394-b4d373835223"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,9 +642,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Iur-m9o86eaQ",
-        "outputId": "9b4fa12e-dd7e-4a2c-89d3-b364d0f23148"
+        "outputId": "e0d31fd7-baec-4a72-bede-798f687f9921"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,23 +727,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000,
           "referenced_widgets": [
-            "2a645021b9904fc1af93f9c421a0cec0",
-            "c53f4d18412d4cc2b7047ba8b9b6c35e",
-            "6b663290391a49c39abf0a8ed3611f66",
-            "0c785a91d083428e9955c798a9d3a8df",
-            "7e50f57ae65440b1a1c218758f633623",
-            "14a44b02d080475bbca99a985582f21a",
-            "0fb421e82f254a7c9c3d930875ab1b55",
-            "d8d3aa1637654a45b397a6a2b8922dcc",
-            "1e2ce2a50b324133b9162f9df214402c",
-            "fb36a9e8ce624a98a2e73df871ed9961",
-            "e27dcec44175460c9ba2a456f8b1a880"
+            "44fc158e7ed140348554ecda6d037bef",
+            "e1df54c36b42440c8f0e69264c42be80",
+            "f4c1c8d4e1084765bfb02afdb81311a8",
+            "0e89f8e14822419195d0ec6d7d98f8c8",
+            "527ed5f86e654e7b92e12887d89c1fc3",
+            "e0fcfe0cf28f4f5c8b1c725b974a65fd",
+            "38c21acc1ca147aba0d80e37df695754",
+            "22e685e944784598985de10519ab4c2e",
+            "ae2a8f71f77842b2a432c99f56fc0759",
+            "2fef4718417d4f98bf7f7372fdd32f4d",
+            "c4b44e8c17a946efaca1326218be9b5f"
           ]
         },
         "id": "vZJadfJq6l7s",
-        "outputId": "fc75d5ff-9dd3-40dd-8cc1-e71221b15cca"
+        "outputId": "3a9cfd11-12a5-4573-ca91-949c0cdc977c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -754,7 +754,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "2a645021b9904fc1af93f9c421a0cec0"
+              "model_id": "44fc158e7ed140348554ecda6d037bef"
             }
           },
           "metadata": {}
@@ -763,6 +763,46 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[0, 31]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[32, 63]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[64, 95]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[96, 127]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[128, 159]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[160, 191]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[192, 223]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[224, 255]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[256, 287]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP30.yuv: index[151] | frames[288, 299]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[0, 31]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[32, 63]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[64, 95]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[96, 127]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[128, 159]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[160, 191]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[192, 223]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[224, 255]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[256, 287]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP36.yuv: index[152] | frames[288, 299]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[0, 31]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[32, 63]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[64, 95]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[96, 127]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[128, 159]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[160, 191]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[192, 223]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[224, 255]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[256, 287]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP42.yuv: index[153] | frames[288, 299]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[0, 31]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[32, 63]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[64, 95]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[96, 127]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[128, 159]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[160, 191]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[192, 223]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[224, 255]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[256, 287]\n",
+            "Extracting sc_slideShow_1280x720_30_8bit_420_300f_264QP48.yuv: index[154] | frames[288, 299]\n",
             "Extracting sc_slideShow_1280x720_30_8bit_420_300f_QP24.yuv: index[155] | frames[0, 31]\n",
             "Extracting sc_slideShow_1280x720_30_8bit_420_300f_QP24.yuv: index[155] | frames[32, 63]\n",
             "Extracting sc_slideShow_1280x720_30_8bit_420_300f_QP24.yuv: index[155] | frames[64, 95]\n",
@@ -863,7 +903,7 @@
             "Extracting sc_slideShow_1280x720_30_8bit_420_300f_SCCQP48.yuv: index[164] | frames[224, 255]\n",
             "Extracting sc_slideShow_1280x720_30_8bit_420_300f_SCCQP48.yuv: index[164] | frames[256, 287]\n",
             "Extracting sc_slideShow_1280x720_30_8bit_420_300f_SCCQP48.yuv: index[164] | frames[288, 299]\n",
-            "Total extraction time: 0:02:06 (Hour:Minute:Second)\n"
+            "Total extraction time: 0:02:44 (Hour:Minute:Second)\n"
           ]
         }
       ]
